--- a/css/styles.css
+++ b/css/styles.css
@@ -701,71 +701,61 @@ padding: 100px 0;
                      fill: #4d5ae5;
                  }
         
-                .textarea-modalodal {
-                 margin-bottom: 16px;
-            
-                 }
+.textarea-modal {
+margin-bottom: 16px;
+}
         
-                 .form-textarea {
-                     padding: 8px 16px;
-                     width: 100%;
-                     height: 120px;
-                     color: rgba(46, 47, 66, 0.4);
-                     font-size: 12px;
-                     line-height: 1.17;
-                     letter-spacing: 0.04em;
-                     border-radius: 4px;
-                     border: 1px solid rgba(46, 47, 66, 0.4);
-                     background-color: transparent;
-                     resize: none;
-                     outline: transparent;
-                     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                
-                 }
+.form-textarea {
+padding: 8px 16px;
+width: 100%;
+height: 120px;
+color: rgba(46, 47, 66, 0.4);
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+border-radius: 4px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+background-color: transparent;
+resize: none;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
         
-                 .form-textarea:focus {
-                     border-color: #4d5ae5;
-                     
-                     
-                 }
+.form-textarea:focus {
+border-color: #4d5ae5;
+}
         
-                 /* checkbox */
-                 .checkbox-form {
-                     margin-bottom: 24px;
-                     position: relative;
-                 }
+/* checkbox */
+.checkbox-form {
+margin-bottom: 24px;
+position: relative;
+}
         
-                 .checkbox {
-                     color: #8e8f99;
-                     font-size: 12px;
-                     line-height: 1.17;
-                     letter-spacing: 0.04em;
-                     
-                     
-                 }
+.checkbox {
+color: #8e8f99;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+}
         
-                 .custom-checkbox {
-                     display: inline-flex;
-                     margin-left: 8px;
-                     align-items: center;
-                     justify-content: center;
-                     fill: transparent;
-                     border-radius: 2px;
-                     border: 1px solid rgba(46, 47, 66, 0.4);
-                     width: 16px;
-                     height: 16px;
-                     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                     
-                 }
+.custom-checkbox {
+display: inline-flex;
+margin-left: 8px;
+align-items: center;
+justify-content: center;
+fill: transparent;
+border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+width: 16px;
+height: 16px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
         
-                 .hidden-checkbox:checked+.checkbox .custom-checkbox {
-                     background-color: #404bbf;
-                     border: none;
-                     fill: #f4f4fd;
-                     
-                 }
+.hidden-checkbox:checked+.checkbox .custom-checkbox {
+background-color: #404bbf;
+border: none;
+fill: #f4f4fd;
+}
         
                  .form-link {
                      color: #4d5ae5;
@@ -870,4 +860,7 @@ padding: 100px 0;
 .form-em {
 display: flex;
 gap: 24px;
+}
+.group-modal {
+    margin-bottom: 8px;
 }
